# ChemSpec

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  design-qa.md  justfile
.github/workflows/: ci.yml  demo.yml  release.yml
assets/: README.md
catalogue/: experience-registry.json
catalogue/candidates/: README.md
conformance/: README.md  manifest.json  manifest.schema.json  requirements.json  requirements.schema.json  reserved-words.txt
conformance/artifacts/: .gitkeep  (+3 more)
corpus/: README.md  dynamic-reactions-v1.json
crates/: README.md
crates/agent/: Cargo.toml
crates/agent/prompts/: dynamic-mechanism.md  dynamic-reaction.md  dynamic-structure.md  oxide-appearance.md  reaction-more-info-follow-up.md  reaction-more-info.md  source-locate.md
crates/agent/schemas/: mechanism-response.json  oxide-appearance-response.json  reaction-more-info-response.json  structure-response.json
crates/agent/src/: appearance.rs  cache.rs  claim.rs  codex.rs  corpus.rs  evidence.rs  family.rs  identity.rs  iupac_name.rs  lib.rs  mechanism.rs  mechanize.rs  naming.rs  organic.rs  outcome.rs  presentation.rs  solve.rs  structure.rs
crates/agent/tests/: live_corpus.rs  live_probe.rs
crates/chem-catalogue/: Cargo.toml  README.md
crates/chem-catalogue/src/: generalized.rs  generalized_elaboration.rs  lib.rs  model.rs  oxygen.rs  pattern.rs  reaction_screening.rs  validation.rs
crates/chem-catalogue/tests/: generalized_g0.rs  generalized_g1.rs  generalized_g2.rs  generalized_g3.rs  slice3.rs
crates/chem-domain/: Cargo.toml  README.md
crates/chem-domain/src/: acidity.rs  cip.rs  formula.rs  generate.rs  identity.rs  iupac.rs  lib.rs  material.rs  periodic.rs  reaction.rs  scalar.rs  serialization.rs  smiles.rs  species.rs  state.rs  structural.rs  unit.rs
crates/chem-domain/tests/: domain.rs  iupac.rs  smiles.rs  structural.rs  wohler.rs
crates/chem-engine/: Cargo.toml
crates/chem-engine/src/: lib.rs
crates/chem-kernel/: Cargo.toml  README.md
crates/chem-kernel/src/: claim_consistency.rs  dative_tests.rs  diagnostic.rs  elaborate.rs  error.rs  evidence.rs  frames.rs  hir.rs  lib.rs  procedure.rs  slice5_tests.rs  source.rs  validate.rs
crates/chem-kernel/tests/: generalized_g4.rs  generalized_g5.rs  slice4.rs  slice5.rs  slice6.rs
crates/chem-presentation/: Cargo.toml
crates/chem-presentation/src/: lib.rs
crates/chems-cli/: Cargo.toml  README.md
crates/chems-cli/src/: authoring.rs  main.rs
crates/chems-cli/tests/: authoring.rs  inspect.rs
crates/chems-conformance/: Cargo.toml  README.md
crates/chems-conformance/src/: lib.rs  main.rs
crates/chems-conformance/tests/: repository.rs
crates/chems-lang/: Cargo.toml  README.md
crates/chems-lang/src/: diagnostic.rs  formatter.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  syntax.rs
crates/chems-lang/tests/: readme_contract.rs  slice2.rs
crates/chemspec-app/: Cargo.toml  build.rs  index.html
crates/chemspec-app/assets/app-icon/: 128x128.rgba  README.md
crates/chemspec-app/assets/fonts/inter/: README.md
crates/chemspec-app/assets/icons/: README.md
crates/chemspec-app/assets/models/: README.md  complete_combustion.clip  gas_evolution.asset.json  heavy_alkali_water_explosion.asset.json  metal.fbx  metal.mesh  metal_displacement.asset.json  phase_synthesis.asset.json  potassium_water_reaction_complete.glb  precipitation.asset.json  synthesis_combination.asset.json  synthesis_combination.clip
crates/chemspec-app/src/: animated_clip.rs  blocking.rs  chemistry.rs  composition_catalogue.rs  dynamic_reaction.rs  elements.rs  fonts.rs  gas_fluid.rs  icons.rs  main.rs  nomenclature.rs  particle_visualization.rs  periodic_table.rs  presentation_paths.snapshot  product_summary.rs  reactant_composer.rs  reaction_candidate_catalogue.rs  reaction_sequence.rs  reaction_workspace.rs  scene_registry.rs  settings.rs  sketcher.rs  structural_2d.rs  structural_3d.rs  structural_3d.wgsl  structural_3d_post.wgsl  structural_physics.rs  theme.rs  vessel.rs
crates/chemspec-app/src/structural_3d/: alkali_water.rs  combustion.rs  displacement.rs  explosion.rs  gas_evolution.rs  neutralisation.rs  phase_synthesis.rs  precipitation.rs  synthesis.rs
crates/chemspec-app/tests/: wgsl_web_guard.rs  windows_subsystem_guard.rs
docs/: README.md  agent-workflow.md  automatic-animation-system.md  catalogue-breadth-execution-plan.md  catalogue-breadth-review-handoff.md  catalogue-content-gap-proposal.md  catalogue-coverage.md  chemistry-engine.md  chems-animation-overhaul-change-note.md  chems-implementation-plan.md  chems-language.md  chems-specification.md  compound-structural-resolution.md  covalent-combinations.md  delivery-plan.md  dynamic-reaction-rebuild-plan.md  general-reaction-families.md  generalized-chemistry-rules.md  generalized-rules-implementation-plan.md  implementation-plan.md  luna-catalogue-handoff.md  macroscopic-visual-system.md  new-animation-integration-prompt.md  oxygen-reaction-screening.md  product-spec.md  rebuild-decisions.md  remediation-plan.md  safety.md  slice3-chemist-review.md  structural-chems-architecture.md  structural-reaction-animation-contract.md  system-architecture.md  ui-design-system.md  verification.md
fixtures/: lithium-water.chems  silver-chloride.chems
grammar/: chems.ebnf
packaging/: Packager.agent-smoke.toml
reaction-rules-check-1/: catalogue.digest  review-request.json
reaction-rules-check-3/: catalogue.digest  review-request.json
reaction-rules-check-final/: review-request.json
schemas/: chem-catalogue-1.schema.json  chem-catalogue-review-1.schema.json  chem-evidence-packet-1.schema.json
tools/: author_combustion.py  author_general_precipitation.py  author_group1_water.py  author_group2_water.py  author_metal_acid.py  author_metal_displacement.py  author_ozone_experiences.py  author_reaction_facts.py  author_reaction_review.py  author_reaction_traits.py  bake-blender-clip.py  bake-fbx-mesh.py  contact-sheet.sh  generate-covalent-catalogue.py  generate-oxygen-catalogue.ps1  generate-oxygen-catalogue.py
(+560 files in other folders)
