[workspace]
members = [
    "crates/chem-catalogue",
    "crates/chem-domain",
    "crates/chem-kernel",
    "crates/chems-conformance",
    "crates/chems-lang",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/charles-mills/ChemSpec"
rust-version = "1.96"
version = "0.1.0"

[workspace.dependencies]
jsonschema = { version = "0.40", default-features = false }
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
