[workspace]
members = [
    "crates/agent",
    "crates/chem-catalogue",
    "crates/chem-domain",
    "crates/chem-kernel",
    "crates/chem-presentation",
    "crates/chems-cli",
    "crates/chems-lang",
    "crates/chemspec-app",
]
resolver = "3"

[workspace.package]
authors = [
    "Aryan Saini <vikram4king@googlemail.com>",
    "Charles Mills <charlesrjmills@gmail.com>",
    "Oliver Robbins <oliver.robbins11@gmail.com>",
    "Patryk <patryktv198@gmail.com>",
]
edition = "2024"
homepage = "https://github.com/charles-mills/ChemSpec"
license = "MIT"
repository = "https://github.com/charles-mills/ChemSpec"
rust-version = "1.96"
version = "0.1.0"

[workspace.dependencies]
fastrand = "2"
jsonschema = { version = "0.40", default-features = false }
iced = { version = "=0.14.0", features = ["canvas", "svg", "tokio"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = "0.4"
num-traits = "0.2"
proptest = "1"
rustix = { version = "1.1.4", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.dev]
# wgpu and Iced are unusably slow at opt-level 0; keep dependencies optimized.
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true
