[package]
name = "chem-catalogue"
description = "Immutable reviewed chemistry facts and catalogue validation for ChemSpec"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chem-domain = { path = "../chem-domain" }
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
jsonschema.workspace = true

[lints]
workspace = true
