[package]
name = "chem-catalogue"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chem-domain = { path = "../chem-domain" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
