[package]
name = "chem-catalogue"
authors.workspace = true
description = "Immutable reviewed chemistry facts and catalogue validation for ChemSpec"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chem-domain = { path = "../chem-domain" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
jsonschema.workspace = true

[lints]
workspace = true
