[package]
name = "chem-domain"
description = "Exact values and stable chemistry types for ChemSpec"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
num-bigint.workspace = true
num-rational.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
