[package]
name = "chem-engine"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chem-catalogue = { path = "../chem-catalogue" }
chem-domain = { path = "../chem-domain" }
chems-lang = { path = "../chems-lang" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
