[package]
name = "chem-presentation"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chem-catalogue = { path = "../chem-catalogue" }
chem-domain = { path = "../chem-domain" }
chem-kernel = { path = "../chem-kernel" }

[lints]
workspace = true
