[package]
name = "chems-cli"
description = "Command-line source, formatting, and expansion inspection for ChemSpec"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "chems"
path = "src/main.rs"

[dependencies]
chem-catalogue = { path = "../chem-catalogue" }
chem-domain = { path = "../chem-domain" }
chem-kernel = { path = "../chem-kernel" }
chems-lang = { path = "../chems-lang" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
