[package]
name = "chems-lang"
authors.workspace = true
description = "Lossless source frontend and formatter for .chems"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "chems_lang"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
sha2.workspace = true

[lints]
workspace = true
