[package]
name = "chemspec-app"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ChemSpec desktop application"

[package.metadata.packager]
product-name = "ChemSpec"
identifier = "dev.charlesmills.chemspec"
publisher = "ChemSpec contributors"
homepage = "https://github.com/charles-mills/ChemSpec"
category = "Education"
license-file = "../../LICENSE"
icons = [
    "assets/app-icon/*.png",
    "assets/app-icon/app-icon.ico",
]
binaries = [{ path = "chemspec-app", main = true }]

[package.metadata.packager.nsis]
installer-icon = "assets/app-icon/app-icon.ico"

[dependencies]
agent = { path = "../agent" }
bytemuck = { version = "1.25.1", features = ["derive"] }
chem-catalogue = { path = "../chem-catalogue" }
chem-domain = { path = "../chem-domain" }
chem-kernel = { path = "../chem-kernel" }
chem-presentation = { path = "../chem-presentation" }
chems-lang = { path = "../chems-lang" }
directories = "6.0"
fastrand.workspace = true
glam = "0.25.0"
iced.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-time = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Location", "Window"] }

[build-dependencies]
serde_json = "1.0"

[lints]
workspace = true
